@@ -54,9 +54,9 @@ $home_url = trim( '/', get_home_url() );
 <?php else :  ?>
     <div class="site-title">
         <a href="<?php echo home_url( '/' );  ?>" rel="home" accesskey="1">
-            <span class="screen-reader-text"><?php _e( 'site title to jump homepage' , 'manduca' ) ; ?></span>
+            <span class="screen-reader-text"><?php _e( 'Jump to homepage' , 'manduca' ) ; ?></span>
             <span class="display-site-title"><?php echo $site_title; ?></span>
-            <span class="tooltip" aria-hidden="true"><?php _e( 'access key: 1', 'manduca' ); ?></span>
+            <span class="tooltip" aria-hidden="true"><?php _e( 'Access key: 1', 'manduca' ); ?></span>
         </a>
     </div>
 
